package ar.utn.ba.ddsi.models.entities;

public enum OrigenHecho {
    CARGA_MANUAL,
    CONTRIBUYENTE,
    DATASET
}