package ar.utn.ba.ddsi.models.entities;

public enum EstadoSolicitud {
    PENDIENTE,
    ACEPTADA,
    SUGERIDOACAMBIO,
    RECHAZADA,
    ACEPTADA_CON_SUGERENCIA,
    RECHAZADOPORSPAM
}