package ar.utn.ba.ddsi.models.entities;

import ar.utn.ba.ddsi.commons.Coordenada;
import jakarta.persistence.*;

import java.time.LocalDate;
import java.time.LocalDateTime;
import java.util.List;
import java.util.stream.Collectors;

@Entity
@Table(name = "hechosSnapshots")
public class HechoSnapshot {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(name = "titulo", columnDefinition = "VARCHAR(100)", nullable = false)
    private String titulo;

    @Column(name = "descripcion", columnDefinition = "TEXT", nullable = true)
    private String descripcion;

    @Column(name = "categoria", columnDefinition = "VARCHAR(100)", nullable = true)
    private String categoria;

    @ElementCollection
    @CollectionTable(name = "contenidos_multimedia_snapshot", joinColumns = @JoinColumn(name = "snapshot_id"))
    @Column(name = "url")
    private List<String> urlsContenidos;

    @Embedded
    private Coordenada lugarAcontecimiento;
    @Column(name = "fecha_del_hecho", columnDefinition = "DATETIME", nullable = false)
    private LocalDateTime fechaHecho;
    @Column(name = "fecha_de_carga", columnDefinition = "DATETIME", nullable = false)
    private LocalDateTime fechaSnapshot;

    protected HechoSnapshot() {}

    public HechoSnapshot(Hecho hecho) {
        this.titulo = hecho.getTitulo();
        this.descripcion = hecho.getDescripcion();
        this.categoria = hecho.getCategoria();
        if (hecho.getContenidosMultimedia() != null) {
            this.urlsContenidos = hecho.getContenidosMultimedia().stream()
                .map(ContenidoMultimedia::getUrl)
                .collect(Collectors.toList());
        }
        this.lugarAcontecimiento = hecho.getLugarAcontecimiento();
        this.fechaHecho = hecho.getFechaHecho();
        this.fechaSnapshot = LocalDateTime.now();
    }
}