@startuml

class Hecho{
- Long id;
- titulo: String
- descripcion: String
- categoria: Categoria
- contenidoMultimedia: List<ContenidoMultimedia>
- lugarAcontecimiento: Coordenada
- fechaHecho: LocalDate
- fechaDeCarga: LocalDateTime
- eliminado: boolean
- Contribuyente contribuyente;
- fechaUltimaActualizacion: LocalDateTime
- solicitudDeModificacion : SolicitudDeModificacion
- etiquetas: HashSet<Etiqueta>
- snapshots: List<HechoSnapshot>
--
+ agregarSnapshot(HechoSnapshot snap): void
}

class HechoSnapshot{
- id: Long
- titulo: String
- descripcion: String
- categoria: Categoria
- contenidosMultimedia: List<ContenidoMultimedia>
- lugarAcontecimiento: Coordenada
- fechaHecho: LocalDateTime
- fechaSnapshot: LocalDateTime
}

enum OrigenHecho{
CARGA_MANUAL
CONTRIBUYENTE
DATASET
PROXY
}

class Categoria{
- id: Long
- nombre: String
}

class Etiqueta{
- id: Long
- nombre: String
}

class ContenidoMultimedia{
- id: Long
- path: String
}

enum EstadoSolicitud {
    PENDIENTE
    ACEPTADA
    SUGERIDOACAMBIO
    RECHAZADA
    ACEPTADA_CON_SUGERENCIA
    RECHAZADOPORSPAM
}


class Coordenada{
- latitud: Double
- longitud: Double
--
+ comoArray(): Double[]
}

class Administrador{
- id: Long
- nombre: String
- apellido: String
}

class Contribuyente{
- id: Long
- nombre: String
- apellido: String
- fechaNacimiento: LocalDate
--
+ getEdad(): int
}

class SolicitudDeModificacion {
- id: Long
- hechoViejo: Hecho;
- hechoNuevo: Hecho;
- estado: EstadoSolicitud;
- motivoDeEstado: String;
- administrador: Administrador
--
+ resolver(ResolucionDTO resolucion): void
}

Hecho -->"*" HechoSnapshot
Hecho --> Categoria
Hecho --> ContenidoMultimedia
Hecho --> OrigenHecho
Hecho --> Coordenada
Hecho --> Contribuyente
Hecho --> SolicitudDeModificacion
Hecho -->"*" Etiqueta

SolicitudDeModificacion --> Hecho
SolicitudDeModificacion --> EstadoSolicitud
SolicitudDeModificacion --> Administrador

@enduml